	  do_find_bracket(). (DLR)
	- Add the ability to do bracket searches at the statusbar
	  prompt.  New functions find_statusbar_bracket_match() and
	  do_statusbar_find_bracket(); changes to do_statusbar_input().
	  (DLR)
	- Beep whenever we can't read a file or directory and have to
	  indicate it on the statusbar, as Pico does.  Changes to
	  do_browser(), open_file(), and write_file(). (DLR)
- browser.c:
  do_browser()
	- When setting the width of each file, use the "?" operator
	  instead of an if/else clause. (DLR)
- chars.c:
  mbwidth()
	- If wcwidth() returns -1 for the character passed in, treat the
	  character as having the width of Unicode U+FFFD (Replacement
	  Character) instead of having a width of zero, since display
	  problems can crop up with the latter approach. (DLR)
  mbstrchr()
	- Detect the case where the character isn't found in the string
	  more accurately. (DLR)
- cut.c:
  cut_line()
	- Since placewewant will always be zero after the line is cut,
	  set it to zero directly instead of assigning it the value of
	  xplustabs(). (DLR)
- files.c:
  read_file()
	- Remove apparently unneeded logic to handle a case where
	  current is NULL, since it shouldn't be NULL there. (DLR)
  get_next_filename()
	- Store the value of digits(ULONG_MAX) in a static, since it
	  doesn't change and hence doesn't need to be recalculated.
	  (DLR)
- global.c:
  shortcut_init()
	- Change the description of the Meta-] shortcut to "Find
	  matching bracket", as it's clearer. (DLR)
- nano.c:
  do_verbatim_input()
	- Move to text.c, since it's an advanced text-based operation.
	  (DLR)
- nano.h:
	- Readd MIN_EDITOR_COLS #define, set to 4. (DLR)
- prompt.c:
  do_statusbar_input()
	- Fix misplaced break when handling NANO_VERBATIM_KEY. (DLR)
  reset_statusbar_cursor()
	- Fix cursor placement problem by modeling the code more closely
	  after reset_cursor(). (DLR)
  get_prompt_string()
	- Adjust #ifdefs to leave out disabled keys entirely instead of